manifests/base/service.yml
# [START api-tpf-$SERVICIO]
apiVersion: v1
kind: Service
metadata:
  name: #{SERVICE_NAME}#
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
  selector:
    app: #{SERVICE_NAME}#
